---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : int\nget k\n"
---
"k"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 17..18): cannot assign into `k`
| error for (FileId(1), 17..18): `k` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `k` declared here
